# ncnnCVCompil

./: CMakeLists.txt  CMakeLists.txt.bac  Main.cpp  Main.cpp.bac  Main.cpp.serial  Main.cpp.thread  Main.cpp.track  Main.cpp.yoloAsff  README.md  alexMain.cpp  ncnnOpencv.md
